Publishing E2E test results

--- a/test/CRMit.E2E/Dockerfile
+++ b/test/CRMit.E2E/Dockerfile
@@ -2,4 +2,4 @@ FROM mcr.microsoft.com/dotnet/sdk:5.0
 COPY . .
 WORKDIR /test/CRMit.E2E
 RUN dotnet restore "CRMit.E2E.csproj"
-ENTRYPOINT ["dotnet", "test"]
+ENTRYPOINT ["dotnet", "test", "-c", "Development", "--results-directory", "/testresults", "--logger", "trx;LogFileName=results.trx"]
