--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
       - ASPNETCORE_ENVIRONMENT=Staging
       - ASPNETCORE_URLS=https://+
       - CONNECTIONSTRINGS__CUSTOMERSDB=Server=customers-db; Database=CustomersDB; User ID=sa; Password=Password1234;
-      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/crmit.customers.pfx
-      - ASPNETCORE_Kestrel__Certificates__Default__Password=1234
+      - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/localhost.crt
+      - ASPNETCORE_Kestrel__Certificates__Default__KeyPath=/https/localhost.key
     volumes:
       - ${HOME}/.aspnet/https:/https/
     depends_on:
